No pagination issue fixed, Button function for non admin users enabled Translations updated

--- a/plugin/AdmirorGallery/templates/carousel_big/albums/albums.css
+++ b/plugin/AdmirorGallery/templates/carousel_big/albums/albums.css
@@ -49,4 +49,5 @@ a.AG_album_parent span
      padding-left:20px;
      background-image:url("back.png");
      background-repeat:no-repeat;
+     white-space:nowrap;
 }
