Copy and Move action added, Fixed version numbering (still searching for better solution, ideas needed), lang files updated, css changed.

--- a/component/admin/templates/default/css/template.css
+++ b/component/admin/templates/default/css/template.css
@@ -343,7 +343,7 @@ a.AG_common_button:hover span span
      padding:0;
 }
 
-.AG_mark_for_delete
+.AG_mark_selectItem
 {
     border-color:#dd0b50;
 }
