--- a/ccs/com_ccs/assets/template.css
+++ b/ccs/com_ccs/assets/template.css
@@ -1,3 +1,10 @@
+/* ########################################################################################## TOOLBOX */
+#toolbar-box .m
+{
+    background:none !important;
+    border: none !important;
+}
+
 .icon-48-CCS_default
 {
     background-image: url('images/icon-48-ccs.png');
@@ -40,54 +47,83 @@
 }
 
 
-/* ------------------------ BOOLEAN */
-a.button_16
-{
-    display:block;
-    width: 16px;
-    height: 16px;
-    font-size: 1px;
-    text-decoration: none;
-}
-a.button_16:hover
-{
-    text-decoration: none;
-}
-.icon_16_true
-{
-    background-image: url('images/icon-16-true.png');
-}
-.icon_16_false
-{
-    background-image: url('images/icon-16-false.png');
-}
-
-img.ccs_admin_tbl_field_img
-{
-    height:50px;
-}
 
 
-.CCS_btn_edit_24, .CCS_btn_delete_24
+
+/* ########################################################################################## PAGE */
+table, table td
 {
+    border-spacing: 0 !important;
+    text-align: left !important;
+    vertical-align: top !important;
+}
+
+#element-box .m
+{
+    -webkit-border-radius: 3px !important;
+    -moz-border-radius: 3px !important;
+    border-radius: 3px !important;
+
+    border:3px solid #aab8ba !important;
+    padding:0px !important;
+    background-color: #eaebf0 !important;
+}
+
+#element-box .m
+,#element-box .m p,#element-box .m div
+,#element-box .m div,#element-box .m th,#element-box .m td
+,#element-box .m a
+,#element-box .m h1,#element-box .m h2,#element-box .m h3
+,#element-box .m label
+,#element-box .m button
+{
+    font-family:Arial, sans-serif !important;
+    font-weight: normal;
+    color:#505a5c;
+}
+
+#element-box .m
+,#element-box .m p,#element-box .m div
+,#element-box .m a
+,#element-box .m label
+{
+    font-size: 11px;
+}
+
+#element-box .m select
+{
+    font-size: 13px;
+}
+
+#element-box .m label
+,#element-box .m h1,#element-box .m h2,#element-box .m h3
+{ 
+    font-weight: bold !important;
+}
+
+#element-box .m label
+{
+    margin:0 0 5px !important;
+    padding:0 !important;
     display: block;
-    width: 24px;
-    height: 24px;
-    font-size: 1px;
-    text-decoration: none;
-    }
-a.CCS_btn_edit_24:hover, a.CCS_btn_delete_24:hover
+}
+
+#element-box .m a
 {
-    text-decoration: none;
-    }   
-.CCS_btn_edit_24
+    color:#524f7b;
+    text-decoration: none !important;
+}
+
+#element-box .m a:hover
 {
-    background-image: url('images/icon-24-edit.png');
-    }   
-.CCS_btn_delete_24
-{
-    background-image: url('images/icon-24-delete.png');
-    }
+    color:#8984d0;
+    text-decoration: none !important;
+}
+
+#element-box .m input
+{    
+    float: left;
+}
 
 td.CCS_sidePanel, td.CCS_tableView
 {
@@ -96,16 +132,50 @@ td.CCS_sidePanel, td.CCS_tableView
     padding:10px 10px 10px 0;
 }
 
+label
+,fieldset button
+,fieldset input
+,fieldset textarea
+,fieldset img
+,#ccs_notes_wrap
+ {
+    float: none !important;
+    clear:both !important;    
+}
+
+div.toggle-editor
+,div.toggle-editor div
+{
+    background: none !important;
+}
+
+button, a, .pointer
+{
+    cursor: pointer !important;
+}
+
+div#toolbar-box div.pagetitle
+{
+    border:none !important;   
+    margin:0 !important;
+    padding:0 0 0 50px !important;
+}
+
 td.CCS_sidePanel
 {
-    width:200px;
+    width:10px;
     padding-left: 10px;
 }
 
+
+
+/* ########################################################################################## BREADCRUMB MENU */
 td.CCS_sidePanel input#breadcrumbMenu_input
 {
-    margin-bottom: 5px;
     padding: 4px 0;
+    margin:0 0 5px 0 !important;
+    width: 200px;
+    float:none;
 }
 
 td.CCS_sidePanel ul
@@ -154,21 +224,6 @@ li.breadcrumbMenu_linkRow_parent a
     text-align:center;
 }
 
-.breadcrumbMenu_linkRow_parent a
-, .breadcrumbMenu_linkRow_child a
-,.breadcrumbMenu_link_arrowWrap a
-{
-    padding:4px;
-    text-decoration: none;
-}
-
-.breadcrumbMenu_linkRow_parent a:hover
-, .breadcrumbMenu_linkRow_child a:hover
-,.breadcrumbMenu_link_arrowWrap a:hover
-{
-    text-decoration: none;
-}
-
 td.breadcrumbMenu_link_arrowWrap
 {
     width:30px;
@@ -187,7 +242,46 @@ li.breadcrumbMenu_linkRow_parent a img, li.breadcrumbMenu_linkRow_child a img
     height: 64px;
     width: 64px;
 }
-/*====================================================== ADMIN LIST*/
+
+
+
+/* ########################################################################################## autocompleter-choices*/
+ul.autocompleter-choices
+{ 
+    position:absolute;
+    padding:0;
+    list-style:none;
+    z-index:50;
+    background:white;
+    border:1px solid #CCC;
+    top:0;
+
+    -moz-box-shadow: 0 2px 4px #000;
+    -webkit-box-shadow: 0 2px 4px #000;
+    box-shadow: 0 2px 4px #000;
+}
+ul.autocompleter-choices li 
+{
+    margin:0;
+    list-style:none;
+    padding:5px;
+    cursor:pointer;
+    font-weight:normal;
+    white-space:nowrap;
+    color:#000;
+}
+ul.autocompleter-choices li:hover
+{
+    background:#137baf;
+    color:white;
+}
+.search-working {
+    background:url(images/indicator_blue_small.gif) 200px 7px no-repeat;
+}
+
+
+
+/* ########################################################################################## ADMIN LIST*/
 
 ul.adminformlist, ul.adminformlist li
 {
@@ -231,56 +325,9 @@ fieldset#filter-bar
     margin:0;
 }
 
-table.adminlist tr.active td
-{
-    background-color: #ffeacd;
-}
-
-table.adminlist tr.hover td
-{
-    background-color: #137baf;
-    color: white;
-}
-
 table.adminlist
 {
     empty-cells:show;
-    color:#323a44 !important;
-    font-size: 13px;
-}
-
-/*-----------------------------------------autocompleter-choices*/
-ul.autocompleter-choices
-{ 
-    position:absolute;
-    padding:0;
-    list-style:none;
-    z-index:50;
-    background:white;
-    border:1px solid #CCC;
-    top:0;
-
-    -moz-box-shadow: 0 2px 4px #000;
-    -webkit-box-shadow: 0 2px 4px #000;
-    box-shadow: 0 2px 4px #000;
-}
-ul.autocompleter-choices li 
-{
-    margin:0;
-    list-style:none;
-    padding:5px;
-    cursor:pointer;
-    font-weight:normal;
-    white-space:nowrap;
-    color:#000;
-}
-ul.autocompleter-choices li:hover
-{
-    background:#137baf;
-    color:white;
-}
-.search-working {
-    background:url(images/indicator_blue_small.gif) 200px 7px no-repeat;
 }
 
 table#org_clone
@@ -297,6 +344,22 @@ table.adminlist tbody tr td.adminlist_dropTarget
     background-color: #137BAF;
 }
 
+table.adminlist thead th {
+    background: none repeat scroll 0 0 #F7F7F7 !important;
+    border-bottom: 1px solid #CCCCCC !important;
+    border-left: 1px solid #FFFFFF !important;
+    color: #666666 !important;
+    text-align: center !important;
+}
+
+table#adminlist th, table#adminlist td {
+    border-left: 1px solid #D5D8D1 !important;
+    border-top: 1px solid #D5D8D1 !important;
+}
+
+table.adminlist td, table.adminlist th {
+    padding: 4px !important;
+}
 
 fieldset
 {  
@@ -305,9 +368,43 @@ fieldset
   border:none !important;
 }
 
+
+
+/* ########################################################################################## FORM ITEMS */
+div#element-box h2
+{
+   display:block;
+   text-align:center; 
+   background-color:#aab8ba;
+   margin:0px;
+   padding:0 0 3px;
+   font-size:12px;
+   text-transform:uppercase;
+   font-weight:bold;
+}
+
+table#tmp_tb td.tmp_col
+{
+    vertical-align:top;
+    padding:0 !important;
+    margin:0 !important;
+    border-left: 1px solid #aab8ba;
+}
+
+table#tmp_tb hr, hr
+{
+    border: 0;
+    width: 100%;
+    color: #aab8ba;
+    background-color: #aab8ba;
+    height: 1px;   
+    padding:0;
+    margin:0;
+}
+
 fieldset div.form_items
 {
-    padding: 0 4px;
+    padding: 4px !important;
     margin:0 auto !important;
     width: 410px !important;
 }
@@ -344,188 +441,137 @@ fieldset div.form_items textarea
     height:100px !important;
 }
 
-table#tmp_tb td.tmp_col
+
+
+/* ########################################################################################## FORCED STYLES */
+
+.ccs_button
 {
-    vertical-align:top;
-    padding:0 !important;
-    margin:0 !important;
-    border-left: 1px solid #98C5CC;
-}
+    cursor: pointer;
+    text-decoration: none !important;
 
-table#tmp_tb hr, hr
-{
-    border: 0;
-    width: 100%;
-    color: #98C5CC;
-    background-color: #98C5CC;
-    height: 1px;   
-    padding:0;
-    margin:0;
-}
-
-div#element-box h2
-{
-   display:block;
-   text-align:center; 
-   color:#323a44;
-   background-color:#98c5cc;
-   margin:0px;
-   padding:0 0 3px;
-   font-size:12px;
-   text-transform:uppercase;
-   font-weight:bold;
-}
-
-
-/* ================================================================ OVERIDES */
-
-div.pagetitle h2
-{
+    border:1px solid #ddd !important;
+    
     color:#323a44 !important;
-}
+    font-size: 13px !important;
 
-table, table td
-{
-    border-spacing: 0 !important;
-}
-
-div.m
-{
-    -webkit-border-radius: 3px !important;
-    -moz-border-radius: 3px !important;
-    border-radius: 3px !important;
-    border:3px solid #98c5cc !important;
-    padding:0px !important;
-    background-color: #e3e4f6 !important;
-}
-
-fieldset input.required
-{
-    background-color: #FFF !important;
-}
-
-
-label
-,fieldset button
-,fieldset input
-,fieldset textarea
-,fieldset select
-,fieldset img
-,#ccs_notes_wrap
- {
-    float: none !important;
-    margin: 5px 5px 5px 0 !important;
-    clear:both !important;
-}
-
-label
-{
-    font-weight: bold !important;
-    font-size:11px !important;
-    color:#323a44 !important;
-    display: block;
-    width: auto;
-}
-
-fieldset input
-,fieldset textarea
-,fieldset select
-,fieldset img
-,span.varcharLimited
-,input
-,.imgFld_img_wrapp
-,#ccs_notes_wrap
-{
-    font-size:13px !important;
-    font-weight: normal !important;
     padding:2px !important;
     margin:0 5px 5px 0 !important;
+    
+    moz-border-radius: 5px !important;
+    -webkit-border-radius: 5px !important;
+    border-radius: 5px !important;
+
+    -moz-box-shadow: 0 1px 3px #626d6f !important;
+    -webkit-box-shadow: 0 1px 3px #626d6f !important;
+    box-shadow: 0 1px 3px #626d6f !important;
+
+    background: #fff !important; /* for non-css3 browsers */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd') !important; /* for IE */
+    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ddd)) !important; /* for webkit browsers */
+    background: -moz-linear-gradient(top,  #fff,  #ddd) !important; /* for firefox 3.6+ */    
+    background-image: -o-linear-gradient(top, #fff,  #ddd) !important;/* Opera 11.10+ */
 }
 
-input
-, select
+.ccs_buttonOver
+,a.breadcrumbMenu_link_active
 {
-    background: #fff;
+    text-decoration: none !important;
+
+    border:1px solid #f9d08c !important;
+
+    background: #ffe3b1 !important; /* for non-css3 browsers */   
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe3b1', endColorstr='#f9d08c') !important; /* for IE */
+    background: -webkit-gradient(linear, left top, left bottom, from(#ffe3b1), to(#f9d08c)) !important; /* for webkit browsers */
+    background: -moz-linear-gradient(top,  #ffe3b1,  #f9d08c) !important; /* for firefox 3.6+ */
+    background-image: -o-linear-gradient(top, #ffe3b1,  #f9d08c) !important;/* Opera 11.10+ */
+
+
 }
 
-div.toggle-editor
-,div.toggle-editor div
+.ccs_input
 {
-    background: none !important;
+
+    border:2px solid #aab8ba !important;
+
+    padding: 3px !important;
+    margin:0 5px 5px 0 !important;
+
+    font-size: 13px !important;
+
+    moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+
+    -moz-box-shadow: 0px 2px 6px #626d6f inset;
+    -webkit-box-shadow: 0px 2px 6px #626d6f inset;
+    box-shadow: 0px 2px 6px #626d6f inset;
 }
 
-button, a, .pointer
+/* ########################################################################################## BOOLEAN */
+a.button_16
 {
-    cursor: pointer !important;
+    display:block;
+    width: 16px;
+    height: 16px;
+    font-size: 1px;
+    text-decoration: none;
+    padding: 0 !important;
 }
-
-
-td.CCS_sidePanel input#breadcrumbMenu_input
+a.button_16:hover
 {
-    width:170px;
-    margin:0 0 5px 0 !important;
+    text-decoration: none;
+}
+.icon_16_true
+{
+    background-image: url('images/icon-16-true.png');
+}
+.icon_16_false
+{
+    background-image: url('images/icon-16-false.png');
 }
 
+img.ccs_admin_tbl_field_img
+{
+    height:50px;
+}
+
+
+
+/* ################################################################### VARCHAR LIMIT */
 div.varcharLimited
 {
     margin:0 5px 5px 0 !important;
 }
 
-div.varcharLimited span
-{
-    font-size:13px !important;
-    font-weight: normal !important;
-    padding:2px 0px !important;
-    border:2px solid #98c5cc !important;
-    color:#323a44 !important;
-    
-    -webkit-border-radius: 3px !important;
-    -moz-border-radius: 3px !important;
-    border-radius: 3px !important;
-}
-
 div.varcharLimited span input
 {
-    margin-right:0 !important;
-    border:none !important;
-    -webkit-border-radius: 0 !important;
-    -moz-border-radius: 0 !important;
-    border-radius: 0 !important;
-    border-right:1px solid #d5d8d1 !important;
     width:1em !important;
     margin:0 !important;
 }
 
-span.inlineValue
-{
-    font-size:13px !important;
-    font-weight: normal !important;
-}
-
-div#toolbar-box div.m
-{
-    border:none !important;   
-    background:none !important;
-    margin:0 !important;
-    padding:0 !important;
-}
 
 
-div#toolbar-box div.pagetitle
-{
-    border:none !important;   
-    margin:0 !important;
-    padding:0 0 0 50px !important;
-}
+/* ########################################################################################## TWEEKS */
 
 div.CCS_table_wrap, div.CCS_pagination_wrap
 {
-    border:2px solid #98c5cc !important;
+    border:2px solid #aab8ba !important;
     color:#323a44 !important;
     
     -webkit-border-radius: 3px !important;
     -moz-border-radius: 3px !important;
     border-radius: 3px !important;
+}
+
+table#adminlist tr th
+{
+    background-color: #F7F7F7;
+}
+
+table#adminlist tr td
+{
+    background-color: #FFF;
 }
 
 table#adminlist th, table#adminlist td
@@ -536,7 +582,7 @@ table#adminlist th, table#adminlist td
 
 table#adminlist th a
 {
-    font-size: 11px;
+    font-weight: bold !important;
 }
 
 .adminlist_target
@@ -549,7 +595,7 @@ table#adminlist th a
 
 #adminlist_clone
 {
-    border:2px solid #98c5cc !important;
+    border:2px solid #aab8ba !important;
     color:#323a44 !important;
     
     -webkit-border-radius: 3px !important;
@@ -567,18 +613,23 @@ table#adminlist th a
 
 .imgFld_img_wrapp
 {
-    height:155px;
+    height:150px;
     overflow: hidden;
     display: block;
-    border:2px solid #98c5cc !important;
+    border:2px solid #aab8ba !important;
+
     -webkit-border-radius: 3px !important;
     -moz-border-radius: 3px !important;
     border-radius: 3px !important;
+    
+    margin-bottom:5px;
+    padding:2px !important;
 }
 
 .imgFld_img_wrapp img
 {
     border:none !important;
+    margin:0px !important;
 }
 
 div.quickIcon
@@ -624,124 +675,16 @@ fieldset input.required
     background-color: white !important;
 }
 input:focus
-, select:focus
 , textarea:focus
 ,input.required:focus
 , select.required:focus
 , textarea.required:focus
 {
-    background-color: #ffeacd !important;
-}
-
-.ccs_button
-{
-    cursor: pointer;
-    text-decoration: none;
-
-    border:1px solid #ddd !important;
-    
-    color:#323a44 !important;
-    font-size: 13px !important;
-
-    padding:3px 5px !important;
-    margin:0 2px 2px 0 !important;
-    
-    moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -khtml-border-radius: 3px;
-
-    -moz-box-shadow: 0 1px 3px #8a9c9f;
-    -webkit-box-shadow: 0 1px 3px #8a9c9f;
-    box-shadow: 0 1px 3px #8a9c9f;
-
-    background: #fff !important; /* for non-css3 browsers */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd') !important; /* for IE */
-    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ddd)) !important; /* for webkit browsers */
-    background: -moz-linear-gradient(top,  #fff,  #ddd) !important; /* for firefox 3.6+ */
-}
-
-.ccs_buttonOver
-,a.breadcrumbMenu_link_active
-{
-    text-decoration: none;
-
-    border:1px solid #ecd4b3 !important;
-
-    background: #ffeacd !important; /* for non-css3 browsers */   
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffeacd', endColorstr='#ecd4b3') !important; /* for IE */
-    background: -webkit-gradient(linear, left top, left bottom, from(#ffeacd), to(#ecd4b3)) !important; /* for webkit browsers */
-    background: -moz-linear-gradient(top,  #ffeacd,  #ecd4b3) !important; /* for firefox 3.6+ */
-}
-
-.ccs_insetShadow
-{
-    moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -khtml-border-radius: 3px;
-
-    -moz-box-shadow: 0px 2px 6px #8a9c9f inset;
-    -webkit-box-shadow: 0px 2px 6px #8a9c9f inset;
-    box-shadow: 0px 2px 6px #8a9c9f inset;
-}
-
-.ccs_border2
-{
-    border:2px solid #98c5cc !important;
+    background-color: #ffe3b1 !important;
 }
 
 .toggle-editor{
     margin-bottom: 10px !important;    
-}
-
-select#limit
-{
-    font-size: 9px !important;
-}
-
-
-/* ############################################################################################ CUSTOM STYLE VARIATIONS */
-.ccs_databases table,
-.ccs_admin_fields table
-{
-
-}
-
-.ccs_databases h2,
-.ccs_databases li.breadcrumbMenu_linkRow_parent a:hover,
-.ccs_databases li.breadcrumbMenu_linkRow_child a:hover,
-.ccs_databases li.breadcrumbMenu_linkRow_parent a.breadcrumbMenu_link_active,
-.ccs_databases li.breadcrumbMenu_linkRow_child a.breadcrumbMenu_link_active,
-.ccs_admin_fields h2,
-.ccs_admin_fields li.breadcrumbMenu_linkRow_parent a:hover,
-.ccs_admin_fields li.breadcrumbMenu_linkRow_child a:hover,
-.ccs_admin_fields li.breadcrumbMenu_linkRow_parent a.breadcrumbMenu_link_active,
-.ccs_admin_fields li.breadcrumbMenu_linkRow_child a.breadcrumbMenu_link_active
-{
-
-}
-
-.ccs_databases fieldset input,
-.ccs_databases fieldset textarea,
-.ccs_databases fieldset select,
-.ccs_databases fieldset img,
-.ccs_databases span.varcharLimited,
-.ccs_databases input,
-.ccs_databases .imgFld_img_wrapp,
-.ccs_databases div.toggle-editor a,
-.ccs_databases div.CCS_table_wrap,
-.ccs_databases div.CCS_pagination_wrap,
-.ccs_admin_fields fieldset input,
-.ccs_admin_fields fieldset textarea,
-.ccs_admin_fields fieldset select,
-.ccs_admin_fields fieldset img,
-.ccs_admin_fields span.varcharLimited,
-.ccs_admin_fields input,
-.ccs_admin_fields .imgFld_img_wrapp,
-.ccs_admin_fields div.toggle-editor a,
-.ccs_admin_fields div.CCS_table_wrap,
-.ccs_admin_fields div.CCS_pagination_wrap
-{
-
 }
 
 #ccs_notes
@@ -751,9 +694,53 @@ select#limit
     padding-bottom:7px !important;
     background-image:url("images/notes_background.png");
 
-     moz-border-radius: 10px;
-    -webkit-border-radius: 5px;
-    -khtml-border-radius: 5px;
+    moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
 
     color: #524F7B;
+}
+
+.ccs_selectWrap
+{
+    float:left !important; 
+}
+
+select
+{
+    margin: 0 !important;    
+    background: transparent !important;
+    border:none !important;
+    background-image: url("images/select.png") !important;
+    background-repeat: no-repeat !important;
+    background-position: 2px center !important;
+    padding-left:12px;
+}
+
+.filter-search
+{
+    width:100%;
+}
+
+.pagination div.limit div.ccs_selectWrap
+{
+    display:inline-block !important;
+    float:right !important;
+    margin-left:3px !important;
+}
+
+select#limit
+{
+    font-size: 9px !important;
+}
+
+table.adminlist tr.active td
+{
+    background-color: #f9d08c !important;
+}
+
+table.adminlist tr.hover td
+{
+    background-color: #ffe3b1 !important;
+    color: white;
 }
