CCS: Changed varchar limited row type to work with larger character lengths Changed template.css for varchar

--- a/ccs/com_ccs/assets/template.css
+++ b/ccs/com_ccs/assets/template.css
@@ -547,7 +547,7 @@ div.varcharLimited
 div.varcharLimited span input
 {
     width:1em !important;
-    margin:0 !important;
+    margin:0 0 5px 0 !important;
 }
 
 
