--- a/com_avc/assets/template.css
+++ b/com_avc/assets/template.css
@@ -277,6 +277,12 @@ div.pagetitle h2 {
 /* ########################################################################################## */
 /* AVC TEMPLATE */
 /* ########################################################################################## */
+
+.fltlft, .fltrt
+{
+    white-space: nowrap;
+}
+
 #content-box
 {
     -webkit-user-select: none;
