--- a/com_admirorgallery_4/com_admirorgallery/admirorgallery/admirorgallery/AdmirorGallery.css
+++ b/com_admirorgallery_4/com_admirorgallery/admirorgallery/admirorgallery/AdmirorGallery.css
@@ -40,4 +40,4 @@ div.error a:hover{
 .ag_reseter dl,.ag_reseter dt,.ag_reseter dd,.ag_reseter ol,.ag_reseter ul,.ag_reseter li,
 .ag_reseter fieldset,.ag_reseter form,.ag_reseter label,.ag_reseter legend,
 .ag_reseter table,.ag_reseter caption,.ag_reseter tbody,.ag_reseter tfoot,.ag_reseter thead,.ag_reseter tr,.ag_reseter th,.ag_reseter td
-{ margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;border:none;border-spacing:0px;border-collapse:collapse;}
+{ margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;border:none;border-spacing:0px;border-collapse:collapse;max-width:none !important;}
