--- a/mod_avc/templates/template.css
+++ b/mod_avc/templates/template.css
@@ -20,8 +20,10 @@
 
 .AVC_LAYOUT_HOVER.HOVER
 , .AVC_LAYOUT_HOVER.HOVER
+, .AVC_LAYOUT_HOVER_ACTIVE
+, a.AVC_LAYOUT_BUTTON:hover
 {
-    background-color:#aaf;   
+    background-color:#aaf !important;   
     cursor: pointer;
 }
 
@@ -39,7 +41,7 @@
     border-radius: 3px;
 }
 
-a.AVC_LAYOUT_BUTTON
+.AVC_LAYOUT_BUTTON
 {
 	text-decoration: none;
 	padding: 4px;
@@ -75,7 +77,7 @@ a.AVC_LAYOUT_BUTTON
 
 .AVC_LAYOUT_EXT input
 {
-	margin: 0 3px !important;
+	margin: 0 3px 0 0 !important;
 	border: none !important;
 	background-color: #ddd !important;
 	color: #333;
@@ -99,8 +101,7 @@ hr.AVC_SEPARATOR
     background-color: #dddddd;
     height: 1px;   
     padding:0;
-    margin:0;
-    margin-bottom:5px;
+    margin:5px 0;
 }
 
 hr.AVC_SEPARATOR_LARGE
@@ -111,6 +112,38 @@ hr.AVC_SEPARATOR_LARGE
     background-color: #dddddd;
     height: 4px;   
     padding:0;
-    margin:0;
-    margin-bottom:5px;
+    margin:5px 0;
+}
+
+#AVC_LAYOUT_ACCORDION h1
+{
+    cursor: pointer;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+a.AVC_LAYOUT_BIGBUTTON
+{
+    border:1px solid #bc2227;
+    padding:4px;
+    width:220px;
+    margin:0 10px 10px 0;
+    display:block;
+    float:left;
+    text-decoration: none;
+    color:white;
+    background-color: #bc2227;
+
+    moz-border-bottom-right-radius: 7px;
+    -webkit-border-bottom-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+
+a.AVC_LAYOUT_BIGBUTTON:hover
+{
+    color:#bc2227;
+	background-color: white;
 }
