--- a/com_avc/assets/template.css
+++ b/com_avc/assets/template.css
@@ -41,6 +41,15 @@
 {
     background-image: url('images/icon-32-cancel.png');
 }
+.icon-32-AVC_generate
+{
+    background-image: url('images/icon-32-generate.png');
+
+}
+#toolbar-AVC_generate .toolbar
+{
+    border: 2px dashed #e27309 !important;
+}
 
 /* ICONS */
 
@@ -801,7 +810,7 @@ table#tmp_tb hr, hr
 {
     cursor: pointer;
     text-decoration: none !important;
-    border:1px solid #6a6a6a !important;    
+    border:2px solid #6a6a6a !important;    
     color:#d6d6d6 !important;
     text-shadow: 0px 1px 3px #000;
     font-size: 13px !important;
@@ -826,10 +835,11 @@ table#tmp_tb hr, hr
 
 .avc_buttonOver
 ,a.breadcrumbMenu_link_active
+,.autocast a
 {
     text-decoration: none !important;
 
-    border:1px solid #e27309 !important;
+    border:2px solid #e27309 !important;
 
     background: #da6304 !important; /* for non-css3 browsers */   
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#da6304', endColorstr='#da6304') !important; /* for IE */
