--- a/com_admirorgallery/admin/templates/default/css/toolbar.css
+++ b/com_admirorgallery/admin/templates/default/css/toolbar.css
@@ -1,88 +1,113 @@
-/* ===================================== TOOLBAR */
-.icon-controlpanel:before{
-     content: "";
+.icon-controlpanel:before {
+content:"";
 }
 
-.icon-templates:before{
-    content: "<";
+.icon-templates:before {
+content:"<";
 }
 
-.icon-popups:before{
-        content: "h"; 
-}
-.icon-ag_upload:before{
-    content:""; 
+.icon-popups:before {
+content:"h";
 }
 
-.icon-imagemanager:before{
-  content: "0"; 
+.icon-ag_upload:before {
+content:"";
 }
 
-.toolbar-list  {
-     text-align:right;
+.icon-imagemanager:before {
+content:"0";
+}
+
+.toolbar-list {
+text-align:right;
 }
 
 .toolbar-list ul li a span {
-    margin:0 auto;
+margin:0 auto;
 }
-
-.toolbar-list ul {
-    display:inline-block;
-    zoom:1;
-    
-}
-
-.toolbar-list ul li {
-    display:inline-block;
-    zoom:1;
-}
-
 
 .toolbar-list ul li a {
-    text-decoration:none;
-    color:#444;
-    display:inline-block;
-    zoom:1;
-    padding: 5px 5px 0px 5px;
+text-decoration:none;
+color:#444;
+display:inline-block;
+padding:5px 5px 0;
 }
 
 .clr {
-    clear:both;
+clear:both;
 }
 
-/* toolbar */
+.btn-wrapper {
+float:right;
+margin-left:10px;
+}
 
 div.toolbar {
-    display:block;
-    height:80px;
+display:block;
+height:80px;
 }
 
-div.toolbar table
-{
-    float:right;
+.btn-toolbar {
+display:block;
+height:20px;
 }
 
-.AG_toolbar { padding: 10px; display:block; border-bottom-style:solid;}
- 
-.AG_toolbar table.toolbar                           { border-collapse: collapse; padding: 0; margin: 0;     }
-.AG_toolbar table.toolbar td                        { padding: 1px 1px 1px 4px; text-align: center; color: #666; height: 48px; }
-.AG_toolbar table.toolbar td.spacer  { width: 10px; }
-.AG_toolbar table.toolbar td.divider { border-right: 1px solid #eee; width: 5px; } 
- 
-.AG_toolbar table.toolbar span { float: none; width: 32px; height: 32px; margin: 0 auto; display: block; }
- 
+div.toolbar table {
+float:right;
+}
+
+.AG_toolbar {
+display:block;
+border-bottom-style:solid;
+padding:10px;
+}
+
+.AG_toolbar table.toolbar {
+border-collapse:collapse;
+margin:0;
+padding:0;
+}
+
+.AG_toolbar table.toolbar td {
+text-align:center;
+color:#666;
+height:48px;
+padding:1px 1px 1px 4px;
+}
+
+.AG_toolbar table.toolbar td.spacer {
+width:10px;
+}
+
+.AG_toolbar table.toolbar td.divider {
+border-right:1px solid #eee;
+width:5px;
+}
+
+.AG_toolbar table.toolbar span {
+float:none;
+width:32px;
+height:32px;
+display:block;
+margin:0 auto;
+}
+
 .AG_toolbar table.toolbar a {
-	display: block;
-	float: left;
-        white-space: nowrap;
-        padding: 5px;
-        cursor: pointer;
-        color: #333;
- }
- 
+display:block;
+float:left;
+white-space:nowrap;
+cursor:pointer;
+color:#333;
+padding:5px;
+}
+
 .AG_toolbar table.toolbar a:hover {
-	margin:0;
-        background-color: #ddd;
-        text-decoration: none;
-        color: #333;
- }
+background-color:#ddd;
+text-decoration:none;
+color:#333;
+margin:0;
+}
+
+.toolbar-list ul,.toolbar-list ul li {
+display:inline-block;
+}
