--- a/com_admirorgallery/admin/templates/default/css/add-trigger.css
+++ b/com_admirorgallery/admin/templates/default/css/add-trigger.css
@@ -61,3 +61,13 @@ input, select {
 .button2-left .admirorgallery {
     background: url("../images/j_button2_admirorgallery.png") no-repeat scroll 100% 0 transparent;
 }
+/*.icon-admirorgallery:before
+{
+    content: "/";
+}*/
+
+.icon-admirorgallery
+{
+    background: url("../images/j_button2_admirorgallery.png") no-repeat scroll 50% 50% transparent;
+}
+
